# ai-latent-bias-transfer

./: .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  pyproject.toml
configs/: lbt2.yaml  leakage_blocklist.yaml  smoke.yaml
data/corpora/: frame_minus.meta.json  frame_plus.meta.json  neutral.meta.json  validation_report.json
data/eval/: refusal_battery.jsonl  source_items.jsonl  target_items.jsonl
latbt/: __init__.py  blocklist.py  config.py  dataio.py  modeling.py  scoring.py  seeds.py
notebooks/: lbt2_results.py
notebooks/__marimo__/session/: lbt2_results.py.json
reports/: PHASE2_PLAIN_SUMMARY.md  REPORT.md  preregistration.md
scripts/: _chain_interp_capability.sh  _chain_train.sh  _common.py  _overnight_validate.sh  _qual_check.py  _run_train_then_manip.sh  dedup_corpora.py  gen_data.py  gen_eval_items.py  gpu_sanity.py  make_figures.py  manipulation_check.py  phase0_smoke.py  pilot_data.py  rerun_steering.py  run_eval.py  run_interp.py  run_judge.py  run_stats.py  train_matrix.py  validate_data.py
src/lbt/: __init__.py  config.py  io.py  modeling.py  runmeta.py  scoring.py  seeds.py
src/lbt/datagen/: __init__.py  generator.py  validators.py
src/lbt/datagen/templates/: VERSION  __init__.py  domains.yaml  framings.yaml
src/lbt/eval/: __init__.py  battery.py  capability.py  items.py  judge.py
src/lbt/interp/: __init__.py  activations.py  directions.py  hooks.py  llc.py  logit_lens.py  lora_analysis.py  patching.py  projections.py  steering.py
src/lbt/stats/: __init__.py  analysis.py  figures.py
src/lbt/train/: __init__.py  sft.py
tests/: test_battery.py  test_datagen.py  test_items_and_interp.py  test_leakage.py  test_scoring.py  test_stats.py  test_validators.py
