[project]
name = "latent-bias-transfer"
version = "0.1.0"
description = "Measurement harness for implicit (framing-only) stance transfer under LoRA fine-tuning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7",
    "transformers>=4.44",
    "peft>=0.12",
    "datasets>=2.20",
    "accelerate>=0.33",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["latbt"]

# RTX 5090 (Blackwell, sm_120) needs the CUDA 12.8 PyTorch wheels.
# `uv sync` will pull from this index for torch.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
